--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
