--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
