--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
